[package]
name = "rust-webapp-boilerplate"
version = "0.1.0"
edition = "2021"

[lib]
name = "webapp_embedded_server"
path = "src/lib.rs"

[[bin]]
name = "rust_webapp_boilerplate"
path = "src/main.rs"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8", features = ["http2", "macros", "multipart", "ws"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.26"
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["include-exclude"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
